# demo_py_pkg

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/demo_py_pkg/: __init__.py  demo_py_pkg.py  read.py
tests/: test_demo_py_pkg.py  test_read.py
