[tool.poetry]
name = "demo_py_pkg"
version = "0.1.0"
description = "A demo python pkg"
authors = ["Eric Ekholm"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
