[tool.poetry]
name = "demo_py_pkg"
version = "0.1.0"
description = "A demo python pkg"
authors = ["Eric Ekholm"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
polars = ">=0.20.14"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
